--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(to right, #ff758c, #ff7eb3);
+  background: linear-gradient(to right, #d17c8a, #786eb3);
   color: #fff;
   margin: 0;
   padding: 0;
