--- a/index.css
+++ b/index.css
@@ -125,7 +125,7 @@ body {
    ========================================== */
 
 .leading-place {
-    background: linear-gradient(135deg, #a29839, #86be31);
+    background: linear-gradient(135deg, #bab79a, #a5b194);
     border: 2px solid #f57c00;
     border-radius: 12px;
     padding: 15px;
@@ -214,7 +214,7 @@ body {
 }
 
 .place-item {
-    background: rgb(115, 170, 188);
+    background: rgb(218, 225, 227);
     border: 2px solid #e2e8f0;
     border-radius: 12px;
     padding: 15px;
